--- a/templates/summary.html
+++ b/templates/summary.html
@@ -1,4 +1,3 @@
-<!--this is summary.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,9 +7,9 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
-    <div class="container">
-        <h2>Summary:</h2>
-        <p>{{ summary }}</p>
+    <div class="container summary">
+        <h1 class="summary-title">Summary</h1>
+        <p class="summary-text">{{ summary }}</p>
     </div>
 </body>
 </html>
